--- a/RCode/ZeroInflatedDataSimulation_STEP1.Rmd
+++ b/RCode/ZeroInflatedDataSimulation_STEP1.Rmd
@@ -30,7 +30,7 @@ r_on_server <- T
 
 # number of cores used in parallel processing
 if (r_on_server == T) {
-  .libPaths("/net/ifs1/san_projekte/projekte/genstat/07_programme/rpackages/amanMRO/")
+  .libPaths("/net/ifs1/san_projekte/projekte/genstat/07_programme/rpackages/forostar/")
   number.of.cores <- 10
   bp <- "/net/ifs1/san_projekte/projekte"
 } else {
@@ -59,7 +59,7 @@ for (i in c(
 toolboxH::parallelisiere()
 
 # source small function
-source(paste0(bp, "/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/functions/batch_anova.R"))
+source(here("RCode/batch_anova.R"))
 ```
 
 ## Data simulation and setup
